pictures and css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Crystal Collector</title>
 
 <!--styles-->
-<link rel="stylesheet" type="text.css" href="../Assets/reset.css">
-<link rel="stylesheet" type="text/css" href="./Assets/css/style.css">
+<link rel="stylesheet" type="text.css" href="../assets/reset.css">
+<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
  <!--scripts-->
  <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body background="assets/images/back2.jpg">
 
     <header class="header"><h1>Crystal Collector!!</h1></header>
 
@@ -47,10 +47,10 @@
     <div class="random-number" id="randNum"></div>
 
     <div class="crystal-array" id="crysArray">
-        <button id="aventurine" class="aventurine"><img src="#" alt=""></button>
-        <button id="citrine" class="citrine"><img src="#" alt=""></button>
-        <button id="rose" class="rose"><img src="#" alt=""></button>
-        <button id="charoite" class="charoite"><img src="#" alt=""></button>
+        <button id="aventurine" class="aventurine"><img src="assets/images/aventurine.jpg" alt="" class="aventurine"></button>
+        <button id="citrine" class="citrine"><img src="assets/images/citrine.jpg" alt="" class="citrine"></button>
+        <button id="rose" class="rose"><img src="assets/images/rose.jpg" alt="" class="rose"></button>
+        <button id="charoite" class="charoite"><img src="assets/images/cutcharoite.jpg" alt="" class="charoite"></button>
     </div>
 
     <div class="total-score">
