Background and responsiveness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!---<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
-    <title>Crystal Collector</title>
+    <title>Collector</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+
 
 <!--styles-->
 <link rel="stylesheet" type="text.css" href="../assets/reset.css">
@@ -17,7 +19,7 @@
 
 </head>
 
-<body background="assets/images/back2.jpg">
+<body background="assets/images/back1.jpg">
 
     <header class="header"><h1>Crystal Collector!!</h1></header>
 
@@ -47,10 +49,10 @@
     <div class="random-number" id="randNum"></div>
 
     <div class="crystal-array" id="crysArray">
-        <button id="aventurine" class="aventurine"><img src="assets/images/aventurine.jpg" alt="" class="aventurine"></button>
-        <button id="citrine" class="citrine"><img src="assets/images/citrine.jpg" alt="" class="citrine"></button>
-        <button id="rose" class="rose"><img src="assets/images/rose.jpg" alt="" class="rose"></button>
-        <button id="charoite" class="charoite"><img src="assets/images/cutcharoite.jpg" alt="" class="charoite"></button>
+        <button id="aventurine" class="aventurine button"><img src="assets/images/aventurine.jpg" alt="" class="aventurine"></button>
+        <button id="citrine" class="citrine button"><img src="assets/images/citrine.jpg" alt="" class="citrine"></button>
+        <button id="rose" class="rose button"><img src="assets/images/rose.jpg" alt="" class="rose"></button>
+        <button id="charoite" class="charoite button"><img src="assets/images/cutcharoite.jpg" alt="" class="charoite"></button>
     </div>
 
     <div class="total-score">
