--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <footer class="footer">&copy; 2019</footer>
 
-<script type="text/javascript" src="./Assets/javascript/game.js"></script>
+<script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </body>
 </html>
