--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <body background="assets/images/back1.jpg">
 
-    <header class="header"><h1>Crystal Collector!!</h1></header>
+    <header class="header"><h1>Crystal Collector</h1></header>
 
     <main>
 
-    <div class="instructions">
+    <div class="instructions transbox">
 
         <h2>Instructions:</h2>
         <p>You will be given a random number at the begining of this game.</p>
@@ -55,13 +55,13 @@
         <button id="charoite" class="charoite button"><img src="assets/images/cutcharoite.jpg" alt="" class="charoite"></button>
     </div>
 
-    <div class="total-score">
+    <div class="total-score transbox">
         <div>Your total score is:</div>
         <br>
         <div id="totScore">0</div>
     </div>
 
-        <div class="wins-loses">
+        <div class="wins-loses transbox">
             <p>Wins:</p>
             <p id="wins">0</p>
             <p>Losses:</p>
